--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <main>
         <div class="container">
+            <h1>Etch Sketch</h1>
+            <div class="grade"></div>
+            <div class="buttoms">
+            <button class="reset">Reinciar</button>
+            <button class="color">Colorido</button>
+            <button class="size">16</button>
+            </div>
             
         </div>
     </main>
