--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch a Sketch</title>
     <link rel="stylesheet" href="/Etch-a-Sketch/src/styles/style.css">
     <script src="/Etch-a-Sketch/src/script/script.js" defer></script>
 </head>
