Actualizando os Arquivos Todos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
-    <link rel="stylesheet" href="/Etch-a-Sketch/src/styles/style.css">
-    <script src="/Etch-a-Sketch/src/script/script.js" defer></script>
+    <link rel="stylesheet" href="/src/styles/style.css">
+    <script src="/src/script/script.js" defer></script>
 </head>
 <body>
     <main>
